Added confirmation email on new reservations and fixed e2e
I have added the reservation confirmation email when new reservations are created, for future update of this feature but implement it to fill later with the code. Also fixed the e2e test that I realised there were wrong when implementing the calendar functionality.